2012-03-25 Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/DKNotificationCenter.h: Fix declaration of queueCount ivar.

2012-01-29 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSConnection+DBus.m: Replace -rootProxy in NSConnection with
	the implementation from our category.
	* Tests/TestDKProxy.m: Test to verify that we are not breaking
	-rootProxy for standard DO.

2012-01-29 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.m: Fix emission of argument names
	* Source/DKMethod.m: Fix bug in specifying argument directions.
	* Source/DKObjectPathNode.m: Actually comply to the D-Bus spec when 
	writing introspection data.
	* Source/DKProxy.m: Implement XML introspection data generation
	* Source/DKProxy+Private.h: Declare -XMLNode on DKProxy
	* Tests/TestDKArgument.m
	* Tests/TestDKInterface.m
	* Tests/TestDKMethod.m
	* Tests/TestDKProxy.m:
	Make tests more robust.

2012-01-28 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKObjectPathNode.h
	* Source/DKObjectPathNode.m
	* Source/DKInterface.m
	* Source/DKSignal.m:
	Implement XML introspection data generation.
	* Tests/GNUMakefile: Add new test file.
	* Tests/TestDKInterface.m: Add some tests for interfaces.

2012-01-27 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.h
	* Source/DKMethod.m
	* Source/DKArgument.m
	* Source/DKSignal.h
	* Source/DKSignal.m
	* Source/DKProxy.m
	* Source/DKPropertyMethod.m:
	Use constants for argument directions consistently.

2012-01-27 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKProperty.m: Implement generation of XML introspection data.
	* Tests/GNUMakefile: Add new test file.
	* Tests/TestDKProperty.m: Add test for XML introspection data generation.

2012-01-27 Niels Grewe <niels.grewe@halbordnung.de>
	
	* Source/DKIntrospectionNode.h
	* Source/DKIntrospectionNode.m:
	Declare -XMLNode on all introspection nodes.
	* Source/DKMethod.m: Implement generation of MXL introspection data.